[gd_scene load_steps=8 format=2]

[ext_resource path="res://OtherMontserrat.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/SQLNode.tscn" type="PackedScene" id=2]
[ext_resource path="res://DeathModal.gd" type="Script" id=3]
[ext_resource path="res://scenes/HighscoreInput.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
outline_color = Color( 0.027451, 0.027451, 0.027451, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 45
outline_size = 2
font_data = ExtResource( 1 )

[node name="death_modal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = 10.0
rect_scale = Vector2( 0.985146, 1.1287 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -421.631
margin_right = 288.0
margin_bottom = 448.369
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="ColorRect"]
margin_left = 119.779
margin_top = 357.934
margin_right = 426.779
margin_bottom = 453.934
custom_fonts/font = SubResource( 1 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top_highscore_label" type="Label" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 65.9801
margin_top = 90.3694
margin_right = 532.98
margin_bottom = 230.369
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highscore_label" parent="ColorRect" instance=ExtResource( 2 )]
position = Vector2( 144.141, 90.3695 )

[node name="ExitButton" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.221
margin_top = 123.245
margin_right = 138.779
margin_bottom = 218.245
custom_fonts/font = SubResource( 2 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="death_info" type="Label" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 65.9801
margin_right = 465.98
margin_bottom = 80.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoreInput" parent="." instance=ExtResource( 4 )]
visible = false
anchor_left = -1.036
anchor_top = -0.694
anchor_right = 0.0
anchor_bottom = -0.012
margin_left = -269.125
margin_top = -304.671
margin_right = -865.862
margin_bottom = -1003.04
rect_scale = Vector2( 1.51912, 1.41698 )

[connection signal="pressed" from="ColorRect/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="ColorRect/ExitButton" to="." method="_on_ExitButton_pressed"]
